# CppAvrLib

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  main.cpp  notes.txt
src/cpp/: PlacementNew.h  VirtualMembers.cpp  VirtualMembers.h
src/resources/: AddressMap.h  Configuration.h  Interrupts.h  Periphery.h
src/resources/interrupts/: DefaultHandler.h  DefaultInterruptHandler.h  EventSource.h  Interrupt.cpp  Interrupt.h  InterruptConfiguration.h  InterruptListener.h  InterruptSource.cpp  InterruptSource.h  IrqListener.h  Listener.h
src/resources/m2560/: AddressMap.h  ISRs.cpp  InterruptUsart0Rx.cpp  InterruptUsart0Rx.h  Interrupts.h  Periphery.cpp  Periphery.h
src/resources/m328p/: AddressMap.h  ISRs.cpp  Interrupts.h  Periphery.h
src/resources/m328pb/: AddressMap.h  ISRs.cpp  Interrupts.h  Periphery.h  m328pb_InterruptVectors.h
src/resources/periphery/: Adc.h  Eeprom.h  GeneralPuposeRegister.cpp  GeneralPurposeFlag.h  GeneralPurposeRegister.h  InterruptPin.h  McuStatus.h  Pin.h  Port.cpp  Port.h  Timer16bit.h  Timer8bit.h  Timer8bitAsync.h  Twi.h  Usart.cpp  Usart.h  Watchdog.h
src/resources/periphery/secondary/: GeneralPurposeFlag.h  InterruptPin.h  Pin.h  PinChangeInterrupt.h
src/resources/periphery/utilities/: RuntimeAllocator.cpp  RuntimeAllocator.h
src/utilities/communication/: DmxClient.hpp  I2cMaster.hpp  SerialRxTx.cpp  SerialRxTx.hpp
src/utilities/datastructures/: Bitmask.hpp  Ringbuffer.hpp
src/utilities/memory/: EepromController.cpp  EepromController.hpp  MemoryPool.hpp
src/utilities/metaprogramming/: Typetraits.hpp
src/utilities/scheduling/: AsynchronousTask.hpp
src/utilities/streaming/: Stream.hpp
src/utilities/time/: Stopwatch.cpp  Stopwatch.hpp
